--- a/practice1.css
+++ b/practice1.css
@@ -88,3 +88,135 @@ img {
 img:hover{
 transform: translateY(20px);
 }
+.head{
+    text-align: center;
+   }
+   .head h3{
+    font-size: 23px;
+    color:rgb(255, 72, 0);
+    
+   }
+   .head h2{
+color:black;
+font-size: 35px;
+   }
+ .service{
+display: flex;
+justify-content:space-around;
+flex-wrap: wrap;
+margin:4rem;
+
+ }
+   .mybox{
+    width:400px ;
+    height:300px;
+    margin:30px;
+    border:0.5px solid black;
+     border-radius: 30px;
+background-color: #b3b4b443;
+box-shadow: 0px 0px 15px -1px black;
+transition: all 0.5s ease-in;
+
+  }
+  .mybox:hover{
+border:3px solid orangered;
+transform: translateY(21px);
+  }
+ 
+  img{
+    margin-top:20px;
+margin-left: 100px;
+
+  }
+p{
+
+font-size: 20px;
+margin-top:30px;
+margin-left: 10px;
+}
+.e{
+    text-align: center;
+}
+.f{
+    font-size: 23px;
+    color: orangered;
+}
+.e h2{
+    font-size: 35px;
+}
+.g{
+display: flex;
+justify-content: space-around;
+flex-wrap: nowrap;
+margin: 100px;
+}
+.h{
+    width:250px;
+    height:400px;
+    border:1px solid black;
+    background-color:  #b3b4b44d;
+    border-radius: 40px;
+    box-shadow: 0px 0px 15px -1px;
+    transition: 0.5s;
+    text-align: center;
+
+}
+.h:hover{
+    border:3px solid orangered;
+transform: translateY(21px);
+}
+.g img{
+    margin-left:5px;
+    height:300px;
+    width:200px
+}
+    .i{
+       
+        margin-left: 50px;
+        color: black;
+        margin-bottom: 70px;
+    }
+.j h3{
+text-align: center;
+color: orangered;
+}
+.j h2{
+    text-align: center;
+}
+form{
+    text-align: center;
+}
+.k{
+   width:280px;
+   margin:7px;
+   padding: 10px;
+border-radius: 10px;
+background-color: #ede0e8;
+border: none;
+padding-left: 10px;
+}
+.sendbutton{
+    width:300px;
+   
+    padding:10px;
+    text-align: center;
+    background-color: orangered;
+    color: white;
+    border-radius: 15px;
+    border: none;
+}
+.sendbutton:hover{
+    color:rgba(255, 11, 11, 0.877);
+  background-color: transparent;
+  border: 1px solid orange;
+}
+.l{
+    background-color:  #b3b4b44d;
+    width:1300px;
+    height:100px;
+    text-align: center;
+}
+.m{
+  margin-top: 25px;
+  padding: 10px;
+}
